# bionnev

./: .gitignore  CMakeLists.txt  Entity.h  Environment.h  Gene.h  MainWindow.h  Organism.h  README.md  cell-simulation.py  cell_rules.yaml  env_rules.yaml  gui.py  main.cpp  main.ipynb  main.py  main_window.py  new_option_windows.py  newgui.py  options_window.py  params.yaml  requirements.txt  sim_rules.py
archive/: cfg_cell_rules.yaml  cfg_env_rules.yaml  gui.py  parameters.py  params.yaml
parameters/: cell_rules.py  cell_rules.yaml  cfg_cell_rules.yaml  cfg_env_rules.yaml  config.yaml  env_rules.py  env_rules.yaml  params.yaml  plot_rules.py  plotting.py
rules/: cell_rules.py  env_rules.py  sim_rules.py
src/: cell-simulation.py  cell.py  environment.py  main.py  main_thread.py  main_window.py  option_windows.py  options_window.py  parameters.py  plotting.py  rule_classes.py  simulation.py
src/classes/: cell.py  environment.py  main_thread.py  networks.py  plotting.py  rule_classes.py  simulation.py
src/parameters/: cell_rules.py  config.json  config.yaml  env_rules.py  plot_rules.py
src/rules/: cell_rules.py  env_rules.py  rule_classes.py
src/web/: index.html  index.js  sketch.js  style.css
